<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/finishAction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_finish_action"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textColor="#222222"
            />
        <Spinner
            android:id="@+id/finishAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finishAction_title"
            android:entries="@array/mission_finish_action"
            android:layout_marginTop="5dp" />
        <EditText
            android:id="@+id/orbitSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/mission_speed_notify"
            />
        <EditText
            android:id="@+id/orbitReturnHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/mission_notify_return_height"
            />
        <EditText
            android:id="@+id/orbitHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/mission_hint_orbit_height"
            />
        <EditText
            android:id="@+id/orbitCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/mission_notify_count"
            />
        <EditText
            android:id="@+id/orbitRadius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/mission_notify_radius"
            />
        <EditText
            android:id="@+id/orbitRemainDegree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/mission_notify_remain_degree"
            />
        <Spinner
            android:id="@+id/entryDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finishAction_title"
            android:entries="@array/mission_finish_action"
            android:layout_marginTop="5dp" />
        <Spinner
            android:id="@+id/headingDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finishAction_title"
            android:entries="@array/mission_finish_action"
            android:layout_marginTop="5dp" />
        <Spinner
            android:id="@+id/rotateDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finishAction_title"
            android:entries="@array/mission_finish_action"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</ScrollView>
