<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/finishAction_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mission_finish_action"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:textColor="#222222"
            />
        <Spinner
            android:id="@+id/finishAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/finishAction_title"
            android:entries="@array/mission_finish_action"
            android:layout_marginTop="5dp" />
        <EditText
            android:id="@+id/waypointSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/mission_speed_notify"
            />
        <EditText
            android:id="@+id/waypointReturnHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/mission_notify_return_height"
            />
        <EditText
            android:id="@+id/waypointHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/mission_notify_waypoint_height"
            />
    </LinearLayout>
</ScrollView>
